--- a/core/lang/SL_framework-fr_FR.po
+++ b/core/lang/SL_framework-fr_FR.po
@@ -4,9 +4,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-04-14T12:12:00+00:00\n"
+"PO-Revision-Date: 2012-05-24T13:27:03+00:00\n"
 "Last-Translator: SedLex <http://www.sedlex.fr/>\n"
 "Last-Translator: PierreF <pf@romanliturgy.org>\n"
+"Last-Translator: wkpixearts <wkpixeartsforall@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -737,4 +738,34 @@ msgstr "Nouvelle phrase"
 
 msgid "To replace?"
 msgstr "Remplacer?"
+
+msgid "Log options"
+msgstr "Options du journal"
+
+msgid "What is the debug level:"
+msgstr "Quel est le niveau de débogage:"
+
+msgid "See the debug logs"
+msgstr "Voir les journaux de débogage"
+
+msgid "Multisite Management"
+msgstr "Gestion multi sites"
+
+msgid "If this option is unchecked, the translation tab won't be displayed in the blog administration panel."
+msgstr "Si cette option est décoché, l&#039;onglet de traduction n&#039;est pas visible dans le panneau d&#039;administration du blog"
+
+msgid "SVN Management"
+msgstr "Gestion SVN"
+
+msgid "Getting SVN information..."
+msgstr "Récupération des informations SVN"
+
+msgid "Number of download: %s"
+msgstr "Numéro du téléchargement: %s"
+
+msgid "Refresh"
+msgstr "Actualiser"
+
+msgid "SVN client for %s"
+msgstr "SVN client pour %s"
 
