git-svn-id: https://plugins.svn.wordpress.org/backup-scheduler/trunk@575108 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lang/backup_scheduler-nl_NL.po
+++ b/lang/backup_scheduler-nl_NL.po
@@ -4,8 +4,9 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-02-25T10:45:27+00:00\n"
+"PO-Revision-Date: 2012-07-20T06:16:43+00:00\n"
 "Last-Translator: Matrix <http://www.pcbeveiligen.nl/>\n"
+"Last-Translator: WybAnema <www.mmwb.nl>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,23 +39,14 @@ msgstr "Tijdstip van de backup:"
 msgid "Please note that 0 means midnight, 1 means 1am, 13 means 1pm, etc. The backup will occur at that time (server time) so make sure that your website is not too overloaded at that time."
 msgstr "Let op: 0 staat voor 0:00, 1 staat voor 1:00, 13 staat voor 13:00 etc. The backup vindt plaats op die tijd (server tijd), zorg dus dat je site niet overactief is op dat tijdstip."
 
-msgid "Please also note that the backup won't be end exactly at that time. The backup process could take up to 6h especially if you do not have a lot of traffic on your website and/or if the backup is quite huge."
-msgstr ""
-
 msgid "Keep the backup files for (in days):"
 msgstr "Bewaar de backups voor x dagen:"
 
 msgid "What do you want to save?"
 msgstr "Wat wil je opslaan?"
 
-msgid "All directories (the full Wordpress installation):"
-msgstr ""
-
 msgid "(i.e. %s)"
 msgstr "(Oftewel %s)"
-
-msgid "Check this option if you want to save everything. Be careful, because the backup could be quite huge!"
-msgstr ""
 
 msgid "The plugins directory:"
 msgstr "Plugins:"
@@ -80,53 +72,20 @@ msgstr "SQL database:"
 msgid "Check this option if you want to save the text of your posts, your configurations, etc."
 msgstr "Vink deze optie aan als je de database wilt opslaan."
 
-msgid "The maximum file size (in MB):"
-msgstr ""
-
 msgid "Please note that the zip file will be split into multiple files to comply with the maximum file size you have indicated"
 msgstr "Let op: het .zip bestand zal worden gesplitst indien deze de maximum grootte van de bijlage overschrijd."
 
 msgid "Do you want that the backup is sent by email?"
 msgstr "Wil je de database per email toegezonden krijgen?"
 
-msgid "Send the backup files by email:"
-msgstr ""
-
 msgid "If so, please enter your email:"
 msgstr "Zoja, voer hier je emailadres in:"
-
-msgid "Do you want to add a suffix to sent files:"
-msgstr ""
 
 msgid "This option allows going round the blocking feature of some mail provider that block the mails with zip attachments (like GMail)."
 msgstr "Deze optie geeft de mogelijkheid om bijvoorbeeld de blokkade van GMail op .zip bestanden te omzeilen."
 
 msgid "You do not need to fill this field if no mail is to be sent."
 msgstr "Dit veld hoeft niet te worden ingevuld indien er geen email wordt verstuurd."
-
-msgid "Do you want that the backup is stored on a FTP?"
-msgstr ""
-
-msgid "Save the backup files on a FTP?"
-msgstr ""
-
-msgid "FTP host:"
-msgstr ""
-
-msgid "Should be at the form %s or %s"
-msgstr ""
-
-msgid "Your FTP login:"
-msgstr ""
-
-msgid "Your FTP pass:"
-msgstr ""
-
-msgid "If you want to be notify when the FTP storage is finished, please enter your email:"
-msgstr ""
-
-msgid "Your PHP installation does not support FTP features, thus this option has been disabled! Sorry..."
-msgstr ""
 
 msgid "Advanced - Memory and time management"
 msgstr "Geavanceerd geheugen en tijdsbeheer"
@@ -143,9 +102,6 @@ msgstr "Ter info: het maximale geheugen van je webserver is %s, huidig geheugeng
 msgid "It is recommended that the maximum attachment size is not set to a value higher than this one."
 msgstr "Het is niet aan te raden dat de maximale grootte deze waarde overschrijd."
 
-msgid "Please note that the files greater than this limit won't be included in the zip file!"
-msgstr ""
-
 msgid "What is the maximum time for the php scripts execution (in seconds):"
 msgstr "Wat is de maximale tijdsduur voor uitvoering van de php scripts (in secondes):"
 
@@ -157,15 +113,6 @@ msgstr "Dit zijn de backup bestanden. Je kan een nieuwe backup forceren of een e
 
 msgid "An automatic backup will be launched in %s days and %s hours."
 msgstr "Een automatische backup zal plaatsvinden over %s dag(en) en %s uur"
-
-msgid "The backup process has started %s hours ago but has not finished yet."
-msgstr ""
-
-msgid "Force a new backup (with Mail/FTP)"
-msgstr ""
-
-msgid "Force a new backup (without any external storage or sending)"
-msgstr ""
 
 msgid "Backups"
 msgstr "Backups"
@@ -191,9 +138,6 @@ msgstr "Backup bestanden"
 msgid "Part %s"
 msgstr "Backup %s"
 
-msgid "Backup finished on %s at %s"
-msgstr ""
-
 msgid "The total size of the files is %s"
 msgstr "Totale grootte van de bestanden is %s"
 
@@ -203,68 +147,17 @@ msgstr "Deze bestanden zullen verwijderd worden over %s dagen"
 msgid "Delete these backup files"
 msgstr "Verwijder deze backup bestanden"
 
-msgid "The process is still in progress for this backup (begun %s at %s)."
-msgstr ""
-
-msgid "The SQL extraction is in progress (%s tables extracted)."
-msgstr ""
-
-msgid "The ZIP creation is in progress (%s files has been added in the zip file and the current size of the zip is %s)."
-msgstr ""
-
-msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
-msgstr ""
-
-msgid "The MAIL sending is in progress (%s files has been sent)."
-msgstr ""
-
-msgid "Cancel this process"
-msgstr ""
-
-msgid "Please wait..."
-msgstr ""
-
 msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
 msgstr "(Er is momenteel geen backup bestand.. Forceer een backup (zie onder))"
-
-msgid "Please wait, a backup is in progress! If you want to force a new backup, refresh this page and end the current backup first."
-msgstr ""
-
-msgid "It is impossible to create the %s file in the %s folder. Please check folder/file permissions."
-msgstr ""
 
 msgid "An other SQL extraction is still in progress (for %s seconds)... Please wait!"
 msgstr "Er is al een database backup gaande (nog %s seconde) Even geduld aub.."
 
-msgid "(SQL extraction)"
-msgstr ""
-
 msgid "An other backup is still in progress (for %s seconds)... Please wait!"
 msgstr "Er is al een backup gaande (nog %s seconde) Even geduld aub.."
 
-msgid "(ZIP creation)"
-msgstr ""
-
-msgid "(FTP sending)"
-msgstr ""
-
-msgid "Backup of %s on %s (%s)"
-msgstr ""
-
-msgid "(MAIL sending)"
-msgstr ""
-
-msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
-msgstr ""
-
-msgid "The file %s cannot be deleted. You should have a problem with file permissions or security restrictions."
-msgstr ""
-
 msgid "An unknown error occured!"
 msgstr "Onbekende fout opgetreden!"
-
-msgid "The process has been canceled by a third person"
-msgstr ""
 
 msgid "A new backup has been generated!"
 msgstr "Nieuwe backup gecreëerd!"
@@ -278,27 +171,111 @@ msgstr "Bijgaand treft u de backup bestanden van %s om %s vandaag"
 msgid "Best regards,"
 msgstr "Met vriendelijke groet,"
 
-msgid "%s backup files has been successfully saved on your FTP (%s)"
-msgstr ""
+msgid "All directories (the full Wordpress installation):"
+msgstr "Alle directories/mappen (De volledige Wordpress installatie)"
 
-msgid "Backup of %s on %s - FTP confirmation"
-msgstr ""
+msgid "Check this option if you want to save everything. Be careful, because the backup could be quite huge!"
+msgstr "Vink deze optie aan als je alles wilt bewaren. Bedenk wel dat de back-up erg groot kan worden!"
+
+msgid "The upload directory for this blog:"
+msgstr "De locatie van de uploadfolder voor je site/blog:"
+
+msgid "All upload directories (for this site and the sub-blogs):"
+msgstr "Alle upload folders (voor deze site en sub-blogs):"
+
+msgid "The upload directory for the main site:"
+msgstr "De uploadmap voor de hoofdsite:"
+
+msgid "All SQL databases:"
+msgstr "Alle SQL databases:"
+
+msgid "Only your SQL database:"
+msgstr "Enkel je SQL databases:"
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc. for the main website"
+msgstr "Vink deze optie aan als je de tekst van je berichten, je instellingen, e.d. wilt opslaan voor de hoofdsite"
+
+msgid "The maximum file size (in MB):"
+msgstr "De maximale omvang van het back-up bestand (in MB):"
+
+msgid "Send the backup files by email:"
+msgstr "Stuur me de backup bestanden via mail:"
+
+msgid "Do you want to add a suffix to sent files:"
+msgstr "Wil je een achtervoegsel toevoegen aan verzonden files:"
+
+msgid "Do you want that the backup is stored on a FTP?"
+msgstr "Wil je de back-up bestanden via FTP bewaren op een externe server?"
+
+msgid "FTP host:"
+msgstr "FTP host:"
+
+msgid "Your FTP login:"
+msgstr "Gebruikersnaam voor je FTP host:"
+
+msgid "Your FTP pass:"
+msgstr "Wachtwoord voor je FTP host:"
+
+msgid "Click on that button %s to test if the above information is correct"
+msgstr "Klik op de button %s om te controleren of de gegevens juist zijn"
+
+msgid "Test"
+msgstr "Test"
+
+msgid "If you want to be notify when the FTP storage is finished, please enter your email:"
+msgstr "Wil je een bericht ontvangen als de upload via FTP voltooid is, geef dan hier je e-mailadres op:"
+
+msgid "Your PHP installation does not support FTP features, thus this option has been disabled! Sorry..."
+msgstr "Je PHP installatie ondersteunt FTP niet en is uitgeschakeld! Sorry ..."
+
+msgid "Please note that the files greater than this limit won't be included in the zip file!"
+msgstr "Let op dat bestanden groter dan de opgegeven limiet niet in het gezipte bestand worden opgenomen!"
+
+msgid "The backup process has started %s hours ago but has not finished yet."
+msgstr "Het back-up prices is %s uur geleden begonnen en nog niet afgerond."
+
+msgid "Force a new backup (with Mail/FTP)"
+msgstr "Forceer een nieuwe back-up (met mail/FTP)"
+
+msgid "Force a new backup (without any external storage or sending)"
+msgstr "Forceer een nieuwe back-up (zonder externe opslag of verzending via mail)"
+
+msgid "Cancel this process"
+msgstr "Breek dit proces af"
+
+msgid "Please wait..."
+msgstr "Even geduld ..."
+
+msgid "(ZIP creation)"
+msgstr "(ZIP-bestand wordt gecreëerd)"
+
+msgid "(MAIL sending)"
+msgstr "(mailbericht wordt verzonden)"
+
+msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
+msgstr "Je Wordpress installatie kan geen mail verzenden (met grote bijlagen)!"
+
+msgid "The process has been canceled by a third person"
+msgstr "Het proces is afgebroken door iemand anders"
 
 msgid "No host has been defined"
-msgstr ""
+msgstr "Er is geen host gedefinieerd"
 
 msgid "Your PHP installation does not support SSL features... Thus, please use a standard FTP and not a FTPS!"
-msgstr ""
+msgstr "Je PHP installatie ondersteunt geen SSL ... Probeer standaard FTP te gebruiken in plaats van FTPS!"
 
 msgid "The host %s cannot be resolved!"
-msgstr ""
-
-msgid "The file %s cannot be transfered to the FTP repository! The ftp_put function returns: %s"
-msgstr ""
+msgstr "Kan de host %s niet vinden!"
 
 msgid "The specified folder %s does not exists. Please create it so that the transfer may start!"
-msgstr ""
+msgstr "De opgegeven folder %s bestaat niet. Maak deze eerst aan, voordat de overdracht kan beginnen!"
 
 msgid "The login/password does not seems valid!"
-msgstr ""
+msgstr "De gebruikersnaam en/of het wachtwoord is ongeldig!"
+
+msgid "The folder %s does not seems to be writable"
+msgstr "Er kan niet naar de folder %s geschreven worden"
+
+msgid "Everything OK!"
+msgstr "Alles gelukt!"
 
